@@ -1,3 +1,8 @@
+857.	[func]		fdupont
+	Improve the cryptolink code, for instance use a constant
+	time comparison.
+	(Trac #3602, git ...)
+
 856.	[build]		marcinw
 	callout_manager.h and server_hooks.h headers are now exported,
 	so statically linked libraries can be tested.
